--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -13,8 +13,12 @@
         </a>
         <ul class="visible-links">
           {%- for link in site.data.navigation.main -%}
+		  
             <li class="masthead__menu-item">
-              HOLA<a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
+			{%- if link.children -%}
+				HIJO
+			{% endif %}
+              <a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
             </li>
           {%- endfor -%}
         </ul>
