--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -16,9 +16,14 @@
 		  
             <li class="masthead__menu-item">
 			{%- if link.children -%}
-				HIJO
-			{% endif %}
+				<ul class="visible-links">
+				{%- for l in link.children -%}
+				<a href="{{ l.url | relative_url }}"{% if l.description %} title="{{ l.description }}"{% endif %}>{{ l.title }}</a>
+				{%- endfor -%}
+				</ul>
+			{% else %}			
               <a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
+			{% endif %}
             </li>
           {%- endfor -%}
         </ul>
