--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -16,11 +16,16 @@
 		  
             <li class="masthead__menu-item">
 			{%- if link.children -%}
-				<ul>
-				{%- for l in link.children -%}
-				<a href="{{ l.url | relative_url }}"{% if l.description %} title="{{ l.description }}"{% endif %}>{{ l.title }}</a>
-				{%- endfor -%}
-				</ul>
+				 <div class="dropdown">
+					<button class="dropbtn">Dropdown
+					<i class="fa fa-caret-down"></i>
+					</button>
+					<div class="dropdown-content">
+						{%- for l in link.children -%}
+						<a href="{{ l.url | relative_url }}"{% if l.description %} title="{{ l.description }}"{% endif %}>{{ l.title }}</a>
+						{%- endfor -%}				
+					</div>
+				</div>
 			{% else %}			
               <a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
 			{% endif %}
