--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -17,7 +17,7 @@
             <li class="masthead__menu-item">
 			{%- if link.children -%}
 				 <div class="dropdown">
-					<button class="dropbtn">link.title
+					<button class="dropbtn">{{ link.title }}
 					<i class="fa fa-caret-down"></i>
 					</button>
 					<div class="dropdown-content">
