--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -9,6 +9,9 @@
 {%- if page.title -%}
   {%- assign seo_title = page.title | append: " " | append: title_separator | append: " " | append: site.title -%}
 {%- endif -%}
+{%- if page.icono -%}
+  <link rel='shortcut icon' href='{{ page.icono }}'>
+{%- endif -%}
 
 {%- if seo_title -%}
   {%- assign seo_title = seo_title | markdownify | strip_html | strip_newlines | escape_once -%}
