--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,9 +30,10 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
+		   {% page.show_title %}
           {% if page.title %}<h1 id="page-title" class="page__title p-name" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" class="u-url" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
-          </h1>{% endif %}
+          </h1>{% endif %}{% endif %}
           {% include page__meta.html %}
         </header>
       {% endunless %}
