--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,7 +19,9 @@ layout: default
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
+	{% if page.show_title %}
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
+	{% endif %}
     {% endunless %}
     {{ content }}
   </div>
