--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -119,7 +119,7 @@ body {
   /* paragraph indents */
   p {
     margin: 0 0 $indent-var;
-
+	text-align: justify;
     /* sibling indentation*/
     @if $paragraph-indent == true {
       & + p {
