--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -77,7 +77,7 @@
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #00FF00;
 }
 
 .dropdown:hover .dropdown-content {
