--- a/_sass/minimal-mistakes/skins/_partyhack.scss
+++ b/_sass/minimal-mistakes/skins/_partyhack.scss
@@ -4,6 +4,7 @@
 
 /* Colors */
 $background-color: #ffffff !default;
+$nav-color: #000000 !default;
 $text-color: #000000 !default;
 $primary-color: #00ff00 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
