--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -188,7 +188,7 @@
     transition: none;
 
     &:hover {
-      color: $masthead-link-color-hover;
+      color: $primary-color;
     }
 
     &.site-logo {
