--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -236,7 +236,6 @@
 
     a {
       position: relative;
-
       &:before {
         content: "";
         position: absolute;
@@ -261,6 +260,7 @@
 
   .hidden-links {
     position: absolute;
+	color: $text-color;
     top: 100%;
     right: 0;
     margin-top: 15px;
