--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,11 @@
     {% if site.footer.links %}
       {% for link in site.footer.links %}
         {% if link.label and link.url %}
-          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
+          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i>
+		  {% if link.show_label %}
+			{{ link.label }}
+		  {% endif %}
+		  </a></li>
         {% endif %}
       {% endfor %}
     {% endif %}
