--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -130,6 +130,7 @@ nav {
   display: block;
   list-style-type: none;
   white-space: nowrap;
+  color: #ffffff;
 
   &--lg {
     padding-right: 2em;
