--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -178,7 +178,23 @@
   align-items: center;
   min-height: $nav-height;
   background: $nav-background-color;
-
+  
+  .dropdown {
+	overflow: hidden;
+	margin: 0 1rem;
+	font-size: 1em;
+	
+	.dropbtn {
+		font-size: 16px;  
+		border: none;
+		outline: none;
+		color: white;
+		padding: 14px 16px;
+		background-color: inherit;
+		font-family: inherit;
+		margin: 0;
+	}
+  }
   a {
     display: block;
     margin: 0 1rem;
@@ -233,7 +249,7 @@
       -ms-flex: none;
       flex: none;
     }
-
+	
     a {
       position: relative;
       &:before {
