--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -37,8 +37,9 @@ body {
 
 .page {
   @include breakpoint($large) {
-    float: right;
-    /* width: calc(100% - #{$right-sidebar-width-narrow});
+    /*
+	float: right;
+    width: calc(100% - #{$right-sidebar-width-narrow});
     padding-right: $right-sidebar-width-narrow; */
   }
 
