--- a/_sass/minimal-mistakes/skins/_partyhack.scss
+++ b/_sass/minimal-mistakes/skins/_partyhack.scss
@@ -26,6 +26,9 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
   color: inherit;
 }
 
+p{
+	text-align: justify !important;
+}
 .ais-search-box .ais-search-box--input {
   background-color: $form-background-color;
 }
