--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -16,7 +16,7 @@
     {% if document.read_time %}
       {% assign words_per_minute = document.words_per_minute | default: site.words_per_minute | default: 200 %}
       {% assign words = document.content | strip_html | number_of_words %}
-		  <h1>HOLA</h1>
+		  <p>HOLA</p>
       <span class="page__meta-readtime">
         <i class="far fa-user" aria-hidden="true"> Author: {{ document.author }}</i> <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-clock" aria-hidden="true"></i>
         {% if words < words_per_minute %}
