--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -1,5 +1,13 @@
 {% assign document = post | default: page %}
 {% if document.read_time or document.show_date %}
+
+{% if post.header.teaser %}
+  {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
+{% else %}
+  {% assign teaser = site.teaser %}
+{% endif %}
+
+
   <p class="page__meta">
 	
     {% if document.show_date and document.date %}
@@ -29,4 +37,7 @@
     {% endif %}
 	{{ post.header.teaser }}
   </p>
+  <div class="archive__item-teaser">
+        <img src="{{ teaser | relative_url }}" alt="">
+      </div>
 {% endif %}
