--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+{% if post.header.teaser %}
+  {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
+{% else %}
+  {% assign teaser = site.teaser %}
+{% endif %}
+
+
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% elsif page.header.video.id and page.header.video.provider %}
@@ -37,6 +44,7 @@ layout: default
 		  {% endif %}
           {% include page__meta.html %}
         </header>
+		{{ teaser }}
       {% endunless %}
 
       <section class="page__content e-content" itemprop="text">
@@ -75,7 +83,7 @@ layout: default
     <div class="page__related">
       <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h2>
       <div class="grid__wrapper">
-        {% for post in site.related_posts limit:4 %}
+        {% for post in site.related_posts limit:5 %}
           {% include archive-single.html type="grid" %}
         {% endfor %}
       </div>
