--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -44,7 +44,7 @@ layout: default
 		  {% endif %}
           {% include page__meta.html %}
         </header>
-		<div class="archive__item-teaser">
+		<div>
           <img style="max-height:250px;" src="{{ teaser | relative_url }}" alt="">
         </div>
       {% endunless %}
