--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -44,8 +44,8 @@ layout: default
 		  {% endif %}
           {% include page__meta.html %}
         </header>
-		<div>
-          <img style="max-height:250px;" src="{{ teaser | relative_url }}" alt="">
+		<div style="text-align: center;">
+          <img style="max-height:250px;" src="{{ post.header.teaser | relative_url }}" alt="">
         </div>
       {% endunless %}
 
