--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -45,7 +45,7 @@ layout: default
           {% include page__meta.html %}
         </header>
 		<div style="text-align: center;">
-          <img style="max-height:250px;" src="{{ post.header.teaser | relative_url }}" alt="">
+          <img style="max-height:250px;" src="{{ teaser | relative_url }}" alt="">
         </div>
       {% endunless %}
 
