--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,5 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
-    {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
-    {% endif %}
-
     {% if site.footer.links %}
       {% for link in site.footer.links %}
         {% if link.label and link.url %}
@@ -16,7 +12,7 @@
       {% endfor %}
     {% endif %}
 
-	-->> {{ site.atom_feed.path }} <<--
+	-->> {{ site.atom_feed.path | 'test' }} <<--
     {% unless site.atom_feed.hide %}
       <li><a href="{% if site.atom_feed.path }{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true" target="_blank"></i> {% if site.atom_feed.show_label %}{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}{% endif %}</a></li>
     {% endunless %}
