--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     {% endif %}
 
 	{{ site.atom_feed }}
-	{% if site.atom_feed.path }HOLA{% else %}CHAO{{% endif %}
+	{% if site.atom_feed.path }HOLA{% else %}CHAO{% endif %}
     {% unless site.atom_feed.hide %}
       <li><a href="{% if site.atom_feed.path }{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true" target="_blank"></i> {% if site.atom_feed.show_label %}{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}{% endif %}</a></li>
     {% endunless %}
