--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,10 +12,8 @@
       {% endfor %}
     {% endif %}
 
-	{{ site.atom_feed }}
-	{% if site.atom_feed.path }HOLA{% else %}CHAO{% endif %}
-    {% unless site.atom_feed.hide %}
-      <li><a href="{% if site.atom_feed.path }{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true" target="_blank"></i> {% if site.atom_feed.show_label %}{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}{% endif %}</a></li>
+	{% unless site.atom_feed.hide %}
+      <li><a href="/feed.xml"><i class="fas fa-fw fa-rss-square" aria-hidden="true" target="_blank"></i> {% if site.atom_feed.show_label %}{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}{% endif %}</a></li>
     {% endunless %}
   </ul>
 </div>
