--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     {% endif %}
 
 	{% unless site.atom_feed.hide %}
-      <li><a href="/feed.xml"><i class="fas fa-fw fa-rss-square" aria-hidden="true" target="_blank"></i> {% if site.atom_feed.show_label %}{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}{% endif %}</a></li>
+      <li><a href="/feed.xml" target="_blank"><i class="fas fa-fw fa-rss-square" aria-hidden="true" target="_blank"></i> {% if site.atom_feed.show_label %}{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}{% endif %}</a></li>
     {% endunless %}
   </ul>
 </div>
