--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -25,6 +25,6 @@
       {% endif %}
     </h2>
     {% include page__meta.html type=include.type %}
-    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}<a href="#">&#91;Leer más&#93;</a></p>{% endif %}
+    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}<a>&#91;Leer más&#93;</a></p>{% endif %}
   </article>
 </div>
