--- a/_includes/archive-partyhack.html
+++ b/_includes/archive-partyhack.html
@@ -9,7 +9,7 @@
 {% else %}
   {% assign title = post.title %}
 {% endif %}
-{% include /mision-vision/ %}
+{% include_relative /mision-vision/ %}
 <div class="{{ include.type | default: 'list' }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
