--- a/_includes/archive-partyhack.html
+++ b/_includes/archive-partyhack.html
@@ -10,7 +10,7 @@
   {% assign title = post.title %}
 {% endif %}
 
-{% include_relative _pages/mision-vision.md %}
+{% include_relative /_pages/mision-vision.md %}
 
 <div class="{{ include.type | default: 'list' }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
