--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+<table>
+	<tr>
+		<td>
 <div class="page__footer-follow">
   <ul class="social-icons">
     {% if site.footer.links %}
@@ -17,5 +20,8 @@
     {% endunless %}
   </ul>
 </div>
-
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow" target="_blank">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" target="_blank" rel="nofollow">Minimal Mistakes</a>.</div>
+		</td>
+		<td><a class="twitter-timeline" href="https://twitter.com/Party_Hack?ref_src=twsrc%5Etfw">Tweets by Party_Hack</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> </td>
+	</tr>
+</table>
+<div class="page__footer-copyright" style="text-align:center">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow" target="_blank">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" target="_blank" rel="nofollow">Minimal Mistakes</a>.</div>
