--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-{% include_relative _pages/nosotros.md %}
+{% include_relative /_pages/nosotros.md %}
 <!-- end custom footer snippets -->
