--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -48,6 +48,7 @@ layout: default
         </header>
 		{% if page.show_teaser %}
 		  <div style="text-align: center;">
+			{{ page.htb.status }}
 			{% if page.htb.status %}
 				<table>
 					<tr>
@@ -67,7 +68,7 @@ layout: default
 						</td>
 					</tr>
 			{% else %}
-            <img style="max-height:250px;" src="{{ teaser | relative_url }}" alt="">
+				<img style="max-height:250px;" src="{{ teaser | relative_url }}" alt="">
 			{% endif %}
 		  </div>
 		  <br/>
