--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -46,7 +46,7 @@ layout: default
 		  {% endif %}
           {% include page__meta.html %}
         </header>
-		{{ page.title }}
+		{{ page.htb }}
 		{% if page.show_teaser %}
 		  <div style="text-align: center;">
             <img style="max-height:250px;" src="{{ teaser | relative_url }}" alt="">
