--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -53,7 +53,7 @@ layout: default
 				<table>
 					<tr>
 						<td><img style="max-height:250px;" src="{{ teaser | relative_url }}" alt=""></td>
-						</td>{% page.htb.os %}</td>
+						</td>{{ page.htb.os }}</td>
 					</tr>
 				</table>
 			{% endif %}
