--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,6 +49,7 @@ layout: default
 		
 		{% if page.show_teaser %}
 		  <div style="text-align: center;">
+			{{ page.htb }}
 			{% if page.htb.status %}
 				<table>
 					<tr>
