--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,8 +49,9 @@ layout: default
 		
 		{% if page.show_teaser %}
 		  <div style="text-align: center;">
-			{{ page.htb }}
-			{% if page.htb.status == "true" %}
+			{{ page.htb.os }}
+			{{ page.htb.status }}
+			{% if page.htb.status %}
 				<table>
 					<tr>
 						<td><img style="max-height:250px;" src="{{ teaser | relative_url }}" alt=""></td>
