--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,7 +49,7 @@ layout: default
 		
 		{% if page.show_teaser %}
 		  <div style="text-align: center;">
-			{{ page.htb.os }}
+			{{ page.htb }}
 			{{ page.htb.status }}
 			{% if page.htb.status %}
 				<table>
