--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -15,6 +15,9 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
+  <div class="datos">
+	<p>PRUEBA</p>
+  </div>
   {% include sidebar.html %}
 
   <div class="archive">
