--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -15,9 +15,7 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
-  <div class="datos">
-	<p>PRUEBA</p>
-  </div>
+  {% include datos.html %}
   {% include sidebar.html %}
 
   <div class="archive">
